--- a/06_Lesen und Schreiben von Dateien/09_Pandas.ipynb
+++ b/06_Lesen und Schreiben von Dateien/09_Pandas.ipynb
@@ -37,18 +37,21 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "Wenn man die ersten Zeilen des Datensatzes anzeigen möchte, kann der folgende Befehl genutzt werden:",
+   "source": "Wenn man die ersten oder letzten Zeilen des Datensatzes anzeigen möchte, können die folgenden Befehle genutzt werden:",
    "id": "31dee6564085ee16"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-11T08:47:31.299860Z",
-     "start_time": "2024-09-11T08:47:31.295622Z"
+     "end_time": "2024-09-11T11:24:29.151617Z",
+     "start_time": "2024-09-11T11:24:29.141959Z"
     }
    },
    "cell_type": "code",
-   "source": "print(df.head())",
+   "source": [
+    "print(df.head())\n",
+    "print(df.tail())"
+   ],
    "id": "8d4ad0cda7fa0300",
    "outputs": [
     {
@@ -67,11 +70,140 @@
       "1              133.58  \n",
       "2              151.39  \n",
       "3              179.66  \n",
-      "4              133.80  \n"
+      "4              133.80  \n",
+      "        Marke    Modell  Baujahr  Kraftstoffverbrauch (l/100km)  \\\n",
+      "995       BMW       3er     2021                           8.99   \n",
+      "996  Mercedes  A-Klasse     2017                           4.58   \n",
+      "997      Audi        A4     2020                           9.43   \n",
+      "998        VW      Golf     2018                           4.66   \n",
+      "999    Toyota     Prius     2021                           5.82   \n",
+      "\n",
+      "     CO2-Ausstoß (g/km)  \n",
+      "995              106.01  \n",
+      "996              191.59  \n",
+      "997              161.55  \n",
+      "998              119.27  \n",
+      "999              160.64  \n"
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 7
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Mit einem einfachen Befehl lassen sich die Spaltenüberschriften ändern.",
+   "id": "1c18e05b4c1e3d54"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-11T11:29:21.045006Z",
+     "start_time": "2024-09-11T11:29:21.034736Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "df.columns = [\"Marke\", \"Baureihe\", \"Baujahr\", \"Kraftstoffverbrauch (l/100km)\", \"CO2-Ausstoß (g/km)\"]\n",
+    "df.head()"
+   ],
+   "id": "c358b4fb58bf36f6",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "      Marke  Baureihe  Baujahr  Kraftstoffverbrauch (l/100km)  \\\n",
+       "0       BMW       3er     2015                           9.20   \n",
+       "1  Mercedes  A-Klasse     2021                           9.74   \n",
+       "2      Audi        A4     2020                           9.36   \n",
+       "3        VW      Golf     2019                           5.99   \n",
+       "4    Toyota     Prius     2021                           5.57   \n",
+       "\n",
+       "   CO2-Ausstoß (g/km)  \n",
+       "0              103.24  \n",
+       "1              133.58  \n",
+       "2              151.39  \n",
+       "3              179.66  \n",
+       "4              133.80  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Marke</th>\n",
+       "      <th>Baureihe</th>\n",
+       "      <th>Baujahr</th>\n",
+       "      <th>Kraftstoffverbrauch (l/100km)</th>\n",
+       "      <th>CO2-Ausstoß (g/km)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>BMW</td>\n",
+       "      <td>3er</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>9.20</td>\n",
+       "      <td>103.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Mercedes</td>\n",
+       "      <td>A-Klasse</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>9.74</td>\n",
+       "      <td>133.58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Audi</td>\n",
+       "      <td>A4</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>9.36</td>\n",
+       "      <td>151.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>VW</td>\n",
+       "      <td>Golf</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>5.99</td>\n",
+       "      <td>179.66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Toyota</td>\n",
+       "      <td>Prius</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>5.57</td>\n",
+       "      <td>133.80</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 9
   },
   {
    "metadata": {},
@@ -96,8 +228,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-11T08:47:56.714183Z",
-     "start_time": "2024-09-11T08:47:56.705930Z"
+     "end_time": "2024-09-11T11:29:41.521239Z",
+     "start_time": "2024-09-11T11:29:41.514193Z"
     }
    },
    "cell_type": "code",
@@ -116,7 +248,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        Marke    Modell  Baujahr  Kraftstoffverbrauch (l/100km)  \\\n",
+      "        Marke  Baureihe  Baujahr  Kraftstoffverbrauch (l/100km)  \\\n",
       "3          VW      Golf     2019                           5.99   \n",
       "4      Toyota     Prius     2021                           5.57   \n",
       "6    Mercedes  A-Klasse     2015                           4.54   \n",
@@ -143,7 +275,7 @@
       "999              160.64  \n",
       "\n",
       "[278 rows x 5 columns]\n",
-      "        Marke    Modell  Baujahr  Kraftstoffverbrauch (l/100km)  \\\n",
+      "        Marke  Baureihe  Baujahr  Kraftstoffverbrauch (l/100km)  \\\n",
       "120       BMW       3er     2017                           5.58   \n",
       "325       BMW       3er     2021                           4.85   \n",
       "858        VW      Golf     2017                           4.93   \n",
@@ -173,7 +305,7 @@
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 10
   },
   {
    "metadata": {},
@@ -184,8 +316,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-11T08:51:09.752005Z",
-     "start_time": "2024-09-11T08:51:09.714138Z"
+     "end_time": "2024-09-11T11:29:46.288872Z",
+     "start_time": "2024-09-11T11:29:46.281993Z"
     }
    },
    "cell_type": "code",
@@ -210,7 +342,7 @@
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 11
   },
   {
    "metadata": {},
