--- a/03_Arbeiten_mit_Operatoren_und_Kontrollstrukturen/01_Übungsaufgaben für Operatoren.ipynb
+++ b/03_Arbeiten_mit_Operatoren_und_Kontrollstrukturen/01_Übungsaufgaben für Operatoren.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "source": [
     "## Aufgabe 4: \n",
-    "Schreiben Sie ein Programm, welches prüft, ob eine vom Anwender eingegebene Zahl ohne Rest durch 5 teilbar ist. Hinweis: Hierzu können Sie eine if-Bedingung nutzen, die wir in der Vorlesung noch nicht behandelt haben. Nutzen Sie die google-Suche, um ein Beispiel für die Anwendung zu finden."
+    "Schreiben Sie ein Programm, welches prüft, ob eine vom Anwender eingegebene Zahl ohne Rest durch 5 teilbar ist."
    ]
   },
   {
